--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
              <div class="line"></div>
              <div class="articleBody clear">
                  <figure>
-                     <img src="img/p.jpg" width="300px">
+                     <img src="img/P.jpg" width="300px">
                  </figure>
                  <p>
                     1. Realiza una presentación tranquila:
